- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    4.8.4, 5.0.0 Beta 1
- 
    None
- 
        716d33d2a73ade42eb31be3e8ecbaeecdd5ddd21
This code crashes because the QLayout held by 'item' is deleted twice:
   QBoxLayout *myLayout = new QHBoxLayout;
   QBoxLayout *subLayout = new QHBoxLayout;
   myLayout->addLayout(subLayout);
   QLayoutItem *item = myLayout->takeAt(0);
   delete myLayout;
   delete item;